Project 7/deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultflow
  labels:
    app.kubernetes.io/name: vaultflow
    app.kubernetes.io/managed-by: helm
