Project 7/deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultflow-api
  namespace: vaultflow
  labels:
    app.kubernetes.io/name: vaultflow
    app.kubernetes.io/component: api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9091"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vaultflow
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 9090
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9091
      targetPort: metrics
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: vaultflow-ui
  namespace: vaultflow
  labels:
    app.kubernetes.io/name: vaultflow
    app.kubernetes.io/component: ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vaultflow
    app.kubernetes.io/component: ui
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
