Project 7/deploy/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultflow
  namespace: vaultflow
  labels:
    app.kubernetes.io/name: vaultflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.vaultflow.io
        - api.vaultflow.io
      secretName: vaultflow-tls
  rules:
    - host: app.vaultflow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultflow-ui
                port:
                  name: http
    - host: api.vaultflow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultflow-api
                port:
                  name: http
